--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -8,12 +8,28 @@
               <%= topic.user.name %>
             </h2>
             <%= image_tag topic.image.url %>
-            <%= image_tag "icons/heart-black.png", class: "topic-index-icon"  %>
-            <%= image_tag "icons/comment.png", class: "topic-index-icon" %>
-            <p class ="topic-text">
-              <%= topic.description %>
+            <% if !topic.favorite_users.include?(current_user) %>
+              <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
+                <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon' %>
+              <% end %>
+              <% else %>
+                <%= link_to favorites_path(topic_id: topic.id), method: :delete do %>
+                  <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon-red' %>
+                <% end %>
+              <% end %>
+              <%= topic.favorites.count %>
+              <%= link_to new_comment_path(topic_id: topic.id) do %>
+                <%= image_tag "icons/comment.png", class: "topic-index-icon" %>
+              <% end %>
+              <p class ="topic-text">
+                <%= topic.description %>
+              </p>
+              <h3 class="topic-author">コメント</h3>
+              <p class="topic-text">
+              <% topic.comments.each do |comment| %>
+                <%= comment.content %>
+              <% end %>
             </p>
-          </div>
         </div>
       </div>
     <% end %>
